--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sai Deepthi-Portfolio</title>
-    <link rel="Stylesheet" href="stylish.css">
+    <link rel="Stylesheet" href="style.css">
 </head>
 <body>
     <header>
