--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <section id="projects">
             <h2>My Projects</h2>
             <h3>Amazon Clone (Post-Login Page)</h3>
+            <p><strong>Project Link:</strong> <a href=" https://saideepthi27.github.io/amazon/" target="_blank">Click here to view the project</a></p>
             <p>Designed and developed an Amazon Clone Post-Login Page using HTML and CSS<br> featuring a navigation bar, product listings, and a footer similar to the original Amazon website</p>
             <h3>Harvest Hub</h3>
             <p>Harvest Hub is a web-based platform that connects farmers directly with consumers, eliminating middlemen and ensuring fresh, organic food reaches customers at fair prices.<br>
